--- a/upload.html
+++ b/upload.html
@@ -156,8 +156,9 @@ function upcourse(courseid,kcnm){
         }else if(document.getElementById(`inputFile`).files[0]==undefined){
             new Toast().showMsg('请选择文件',1000)
         }else{
+            var to=new Toast().showMsg('正在上传，请稍等')
             user.uploadFile('inputFile',{dname,teacher,username,origion,filedesc,course},function(data,state){
-
+                to.removeMsg();
             if(data.status==200){
                 new Toast().showMsg('上传成功',1000);
                 setTimeout(function(){
