--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                              <label class="col-sm-3 control-label"></label>
                              <div class="col-sm-6">
                                  <input id="userInput" type="text" class="form-control"
-                                        placeholder="请输入账号">
+                                        placeholder="请输入用户名或邮箱">
                              </div>
                          </div>
                          <div class="form-group">
