--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="" id="index">
         <div class="big-box container">
             <div class="big-font">
-                让知识回归平凡
+                让知识回归回归平凡
             </div>
             <div class="big-text">
                 山东大学软件学院学术资源共享平台
