--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
              <div class="container" id="activity">
                  <div class="title"><div class="line"></div> 动态 <div class="line"></div></div>
                  <div class="small-tag">记录我们的点点滴滴</div>
-                 <div class="row row-line">
+                 <!-- <div class="row row-line">
                      <div class="col-xs-12 col-sm-6" >
                         <h3>Python101 线下女性编程活动</h3>
                          <small class="that-blue">2017年8月6日</small>
@@ -147,12 +147,11 @@
                      <div class="col-xs-12 col-sm-6" >
                          <h3>智库操作系统数据库发布</h3>
                          <small class="that-blue">2017年10月6日</small>
-                         <p>aaaaaa</p>
                      </div>
                      <div class="col-xs-12 col-sm-6">
                          <img src="imgs/148.jpg" alt="" style="width: 80%;height: auto;">
                      </div>
-                 </div>
+                 </div> -->
 
              </div>
          </div>
@@ -203,7 +202,7 @@
                      <div class="col-sm-4 col-xs-6" >
                          <img class="icon-img" src="imgs/email-icon.png" alt="">
                          <div>邮箱</div>
-                         <div>JP_idea@163.com</div>
+                         <div><a href="mailto:JP_idea@163.com?subject=关于智库&body=关于智库，我想说" style="color:black;">JP_idea@163.com</a></div>
                      </div>
                      <div class="col-sm-4 col-xs-6">
                          <img class="icon-img" src="imgs/wechat-icon.png" alt="">
