--- a/index.html
+++ b/index.html
@@ -281,6 +281,9 @@
                      </form>
                  </div>
                  <div class="modal-footer">
+                     <button type="button" id="findPassword" class="btn btn-info">
+                         找回密码
+                     </button>
                      <button type="button" class="btn btn-default" data-dismiss="modal"  data-toggle="modal"  data-target="#regist">点击注册
                      </button>
                      <button type="button" class="btn btn-primary" id="login-btn">
