--- a/ResetPassword.html
+++ b/ResetPassword.html
@@ -2,37 +2,68 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>重置密码</title>
     <script src="js/toastDom.js"></script>
     <link rel="stylesheet" href="css/ResetPwd.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
-<div class="outer">
-    <div class="container">
-        <form class="form-horizontal">
-            <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label" style="color: white;">新密码</label>
-                <div class="col-sm-10">
-                    <input type="email" class="form-control" id="inputEmail3" placeholder="newPassword">
+    <div class="outer" style="padding-top: 50px">
+        <div class="container">
+            <h2 style="color: white;padding-bottom: 20px"  class="text-center">重置密码</h2>
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <label for="psd" class="col-sm-2 control-label" style="color: white;">新密码</label>
+                    <div class="col-sm-8">
+                        <input type="password" class="form-control" id="psd" placeholder="newPassword">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label" style="color: white;" >重复密码</label>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword3" placeholder="repeatPassword">
+                <div class="form-group">
+                    <label for="psd2" class="col-sm-2 control-label" style="color: white;">重复密码</label>
+                    <div class="col-sm-8">
+                        <input type="password" class="form-control" id="psd2" placeholder="repeatPassword">
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default">重置密码</button>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <button type="submit" id="reset" class="btn btn-default">重置密码</button>
+                    </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
-</div>
-
-
 </body>
+
+<script>
+    (()=>{
+        function isEmpty(id) {
+            if(document.getElementById(id).value==''){
+                document.getElementById(id).focus();
+                return true;
+            }
+            return false;
+        }
+
+        document.getElementById('reset').onclick=function () {
+            event.preventDefault();
+            event.returnValue=false;
+            if(isEmpty('psd')||isEmpty('psd2')){
+                alert('输入有误');
+                return;
+            }
+            if(document.getElementById('psd').value!==document.getElementById('psd2').value){
+                alert('两次输入不一致');
+                return;
+            }
+            // fetch(URL,{method:}).then(data=>{
+            //     console.log(data)
+            // })
+
+        }
+        
+        
+    })()
+
+</script>
 </html>
