--- a/resourse.html
+++ b/resourse.html
@@ -102,8 +102,8 @@
             </ul>
         </div>
         
-            <!-- <div id="handout_wrap_inner"></div>
-        <a href="http://localhost:8080/java.pdf">aaaaa</a> -->
+            <!-- <div id="handout_wrap_inner"></div> -->
+        <!-- <a href="http://localhost:8080/java.pdf">aaaaa</a> -->
         <div id="doc">
             
             <!-- <div class="panel panel-default mt leftblue">
@@ -267,13 +267,5 @@
 
 </body>
 <script src="js/resourse.js"></script>
-<!-- <script type="text/javascript" src="js/jquery.media.js"></script>
-        <script type="text/javascript">  
-            $('#handout_wrap_inner').media({
-                   width: '100%',
-                   height: '100%',
-                   autoplay: true,
-                   src:'http://localhost:8080/java.pdf',
-                       }); 
-           </script> -->
+
 </html>
