--- a/preview.html
+++ b/preview.html
@@ -75,7 +75,7 @@
             });
             
         }
-
+        new Toast().showMsg('首次加载时间稍长，请耐心等候',1000)
 
         var fid = window.location.search.substr(1);
         var loadurl = 'getFileDetails/'+fid+'.do';
