--- a/personalCenter.html
+++ b/personalCenter.html
@@ -40,6 +40,7 @@
                     <li class="option"><a href="#">上传的文件</a></li>
                     <li class="option"><a href="#">下载的文件</a></li>
                     <li class="option"><a href="#">站内信</a></li>
+                    <li class="option"><a href="#">个人数据</a></li>
                 </ul>
             </div>
         </div>
@@ -225,10 +226,16 @@
             </div>
           </div> -->
     </div>
+    <div id="data" style="display: none;">
+        <div id="word"></div>
+    </div>
 </div>
 
 </body>
 <script src="js/resourse.js"></script>
 <script src="js/personalCenter.js"></script>
-
+<script src="https://gw.alipayobjects.com/os/antv/assets/g2/3.1.0/g2.min.js"></script>
+<script src="https://gw.alipayobjects.com/os/antv/assets/data-set/0.8.7/data-set.min.js"></script>
+<!-- <script src="https://gw.alipayobjects.com/os/antv/assets/lib/lodash-4.17.4.min.js"></script> -->
+<script src="js/initCharts.js"></script>
 </html>
