--- a/personalCenter.html
+++ b/personalCenter.html
@@ -227,7 +227,9 @@
           </div> -->
     </div>
     <div id="data" style="display: none;">
-        <div id="word"></div>
+        <div id="word" style="width: 80%;margin: 0 auto;"></div>
+        <div id="line" style="width: 80%;margin: 0 auto;"></div>
+        <div id="pie" style="width: 80%;margin: 0 auto;"></div>
     </div>
 </div>
 
