--- a/personalCenter.html
+++ b/personalCenter.html
@@ -226,10 +226,10 @@
             </div>
           </div> -->
     </div>
-    <div id="data" style="display: none;">
-        <div id="word" style="width: 80%;margin: 0 auto;"></div>
-        <div id="line" style="width: 80%;margin: 0 auto;"></div>
-        <div id="pie" style="width: 80%;margin: 0 auto;"></div>
+    <div id="data" class="row" style="display: none;">
+        <div id="word" class="col-sm-5"></div>
+        <div id="line" class="col-sm-5"></div>
+        <div id="pie" class="col-sm-6"></div>
     </div>
 </div>
 
