推荐和个人图表的接口

--- a/personalCenter.html
+++ b/personalCenter.html
@@ -259,11 +259,12 @@
                         <li class="list-group-item">Vestibulum at eros</li>
                     </ul>
                 </div>
-                <div id="word" class="col-sm-5"></div>
+                <div class="col-sm-1"></div>
+                <div id="word" class="col-sm-6"></div>
             </div>
             <div class="row">
-                <div id="line" class="col-sm-5"></div>
-                <div id="pie" class="col-sm-5"></div>
+                <div id="line" class="col-sm-6"></div>
+                <div id="pie" class="col-sm-6"></div>
             </div>
 
 
