--- a/personalCenter.html
+++ b/personalCenter.html
@@ -245,13 +245,9 @@
             <div class="row">
                 <div class="col-sm-5 panel panel-info" style="margin:0 15px;padding: 0">
                     <!-- Default panel contents -->
-                    <div class="panel-heading">Panel heading</div>
-                    <div class="panel-body">
-                        <p>...</p>
-                    </div>
-
+                    <div class="panel-heading">数据统计</div>
                     <!-- List group -->
-                    <ul class="list-group">
+                    <ul class="list-group" id="m_table">
                         <li class="list-group-item">Cras justo odio</li>
                         <li class="list-group-item">Dapibus ac facilisis in</li>
                         <li class="list-group-item">Morbi leo risus</li>
